regression/tests/bugfixes/iptables-inline.conf
#
# Check that protections against direct use of iptables commands are
# functional.
#
version 5

interface eth0 test
	policy drop
	iptables -N chainb
	/sbin/iptables -N chain4
if [ "$RESERVED_IPV6" ]
then
	/sbin/ip6tables -N chain6
fi
==== IPv4 AUDITED OUTPUT ====
#
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
COMMIT
#
#
*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
COMMIT
#
#
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
:chain4 - [0:0]
:chainb - [0:0]
:in_test - [0:0]
:out_test - [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -i eth0 -j in_test
-A INPUT -m state --state RELATED -j ACCEPT
-A INPUT -m limit --limit 1/sec -j LOG --log-prefix "IN-unknown:"
-A INPUT -j DROP
-A FORWARD -m state --state RELATED -j ACCEPT
-A FORWARD -m limit --limit 1/sec -j LOG --log-prefix "PASS-unknown:"
-A FORWARD -j DROP
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -o eth0 -j out_test
-A OUTPUT -m state --state RELATED -j ACCEPT
-A OUTPUT -m limit --limit 1/sec -j LOG --log-prefix "OUT-unknown:"
-A OUTPUT -j DROP
-A in_test -m state --state RELATED -j ACCEPT
-A in_test -m limit --limit 1/sec -j LOG --log-prefix "IN-test:"
-A in_test -j DROP
-A out_test -m state --state RELATED -j ACCEPT
-A out_test -m limit --limit 1/sec -j LOG --log-prefix "OUT-test:"
-A out_test -j DROP
COMMIT
#
==== IPv4 AUDITED END ====
==== IPv6 AUDITED OUTPUT ====
#
*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
COMMIT
#
#
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
:chain6 - [0:0]
:chainb - [0:0]
:in_test - [0:0]
:out_test - [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -i eth0 -j in_test
-A INPUT -m state --state RELATED -j ACCEPT
-A INPUT -m limit --limit 1/sec -j LOG --log-prefix "IN-unknown:"
-A INPUT -j DROP
-A FORWARD -m state --state RELATED -j ACCEPT
-A FORWARD -m limit --limit 1/sec -j LOG --log-prefix "PASS-unknown:"
-A FORWARD -j DROP
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -o eth0 -j out_test
-A OUTPUT -m state --state RELATED -j ACCEPT
-A OUTPUT -m limit --limit 1/sec -j LOG --log-prefix "OUT-unknown:"
-A OUTPUT -j DROP
-A in_test -m state --state RELATED -j ACCEPT
-A in_test -m limit --limit 1/sec -j LOG --log-prefix "IN-test:"
-A in_test -j DROP
-A out_test -m state --state RELATED -j ACCEPT
-A out_test -m limit --limit 1/sec -j LOG --log-prefix "OUT-test:"
-A out_test -j DROP
COMMIT
#
==== IPv6 AUDITED END ====
